--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-	"name": "boilerplate-project-messagebaord",
+	"//1": "describes your app and its dependencies",
+	"//2": "https://docs.npmjs.com/files/package.json",
+	"//3": "updating this file will download and update your packages",
+	"name": "my-hyperdev-app",
 	"version": "0.0.1",
-	"description": "InfoSec project for freeCodeCamp",
+	"description": "What am I about?",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"body-parser": "^1.15.2",
-		"chai": "^4.2.0",
-		"chai-http": "^3.0.0",
-		"cors": "^2.8.1",
-		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
-		"helmet": "^3.1.0",
+		"cors": "^2.8.1",
+		"body-parser": "^1.15.2",
+		"chai": "^3.5.0",
+		"mongodb": "^3.1.13",
+        "mongoose": "^5.4.17",
+		"chai-http": "^3.0.0",
 		"mocha": "^3.2.0",
-		"mongodb": "^3.6.6",
-		"mongoose": "^5.12.5"
+		"zombie": "^5.0.5",
+		"helmet": "^3.1.0"
+	},
+	"engines": {
+		"node": "4.4.3"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-project-messageboard"
+		"url": "https://hyperdev.com/#!/project/welcome-project"
 	},
 	"keywords": [
 		"node",
+		"hyperdev",
 		"express"
 	],
 	"license": "MIT"
