--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-	"//1": "describes your app and its dependencies",
-	"//2": "https://docs.npmjs.com/files/package.json",
-	"//3": "updating this file will download and update your packages",
-	"name": "my-hyperdev-app",
+	"name": "freecodecamp-anonymous-messageboard-project",
 	"version": "0.0.1",
-	"description": "What am I about?",
+	"description": "Anonymous Messagebaord project for freeCodeCamp",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"cors": "^2.8.1",
+		"argon2": "^0.30.2",
 		"body-parser": "^1.15.2",
-		"chai": "^3.5.0",
-		"mongodb": "^3.1.13",
-        "mongoose": "^5.4.17",
+		"chai": "^4.2.0",
 		"chai-http": "^3.0.0",
+		"cors": "^2.8.1",
+		"dotenv": "^8.2.0",
+		"express": "^4.14.0",
+		"helmet": "^3.23.3",
 		"mocha": "^3.2.0",
-		"zombie": "^5.0.5",
-		"helmet": "^3.1.0"
-	},
-	"engines": {
-		"node": "4.4.3"
+		"mongoose": "^6.7.2"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://github.com/paalamugan/freecodecamp-anonymous-messageboard-project"
 	},
 	"keywords": [
 		"node",
-		"hyperdev",
-		"express"
+		"express",
+		"mongoose"
 	],
 	"license": "MIT"
 }
